recreate-deployment/deployment/blue-ingress.yaml
# blue-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-ing
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: blue.handle.local
    http:
      paths:
      - backend:
          service:
            name: blue-svc
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
